--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 name: Joseph Bethards
-description: This is a sample Jekyll Blog.
-
+title: Joseph Bethards
+description: Aspiring Software Engineer
